2010-02-23  Yuta Kitamura  <yutak@chromium.org>

        Reviewed by Dan Bernstein.

        Fix alignment of vertical-align: text-bottom inside an inline-block.
        
        This patch is based on a fix provided by Takahito Hirano.

        display: inline-block + vertical-align: text-bottom causes misalignment.
        https://bugs.webkit.org/show_bug.cgi?id=30846

        * fast/inline-block/inline-block-vertical-align-2.html: Added.
        * fast/inline-block/inline-block-vertical-align-2-expected.txt: Added.

2010-02-23  Tony Chang  <tony@chromium.org>

        Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=34634
        Pasting a list into the middle of another list item should split the target
        list item into two separate list items.  This matches the behavior in other
        browsers.

        * editing/pasteboard/paste-list-004-expected.txt: Added.
        * editing/pasteboard/paste-list-004.html: Added.

2010-02-18  Philippe Normand  <pnormand@igalia.com>

        Reviewed by Eric Seidel.

        media/video-display-aspect-ratio.html fails
        https://bugs.webkit.org/show_bug.cgi?id=34933

        Original patch by Eric Carlson.

        * media/content/test-par-16-9.mp4: Change the width of the video
        track from 426.666 to 426.
        * platform/mac-leopard/Skipped: Unskip the test, it should pass now.

2010-02-22  Chris Evans  <cevans@chromium.org>

        Reviewed by Darin Adler.

        Add test for https://bugs.webkit.org/show_bug.cgi?id=32842
        It has been fixed on trunk for a while, but we want to make sure we
        do not regress.

        * fast/text/find-layout-crash.html: Added.
        * fast/text/find-layout-crash-expected.txt: Added.

2010-02-22  Csaba Osztrogonác  <ossy@webkit.org>

        Rubber-stamped by Alexey Proskuryakov.

        [Qt] fast/encoding/invalid-UTF-8-2.html fails
        https://bugs.webkit.org/show_bug.cgi?id=35263
