@@ -1,3 +1,12 @@
+2010-02-23  Tony Chang  <tony@chromium.org>
+
+        Not reviewed.
+        Revert r55135 because the layout test is failing on all the bots.
+        https://bugs.webkit.org/show_bug.cgi?id=34634
+
+        * editing/pasteboard/paste-list-004-expected.txt: Removed.
+        * editing/pasteboard/paste-list-004.html: Removed.
+
 2010-02-23  Yuta Kitamura  <yutak@chromium.org>
 
         Reviewed by Dan Bernstein.
